testsuite/tests/rep-poly/RepPolyMatch.stderr

RepPolyMatch.hs:11:9: error:
    • The type of the first pattern in the case alternative
      does not have a fixed runtime representation:
        a :: TYPE rep
    • In the expression: \case
      In an equation for ‘match’: match = \case
